@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * add Kakao API (https://kakao.com/) (thanks to https://github.com/v0o0v)
+ * support chunks in JDKHttpClient's Multipart (thanks to https://github.com/eos1d3)
 
 [7.1.1]
  * add Proxy support (via config's option) to internal JDKHttpClient (thanks to https://github.com/bjournaud)
